@@ -74,6 +74,8 @@ importFrom(crayon,green)
 importFrom(crayon,red)
 importFrom(crayon,yellow)
 importFrom(digest,digest)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,left_join)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_line)
